--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div class="row v-center text-center">
                 <div id="color" class="col-xs-12 col-md-12 header-text">
                     <h2 id="name_School">Universidad Istmo Americana</h2>
+                    <p id="lema">Ingeniería en Desarrollo y Gestión de Software.</p>
                     <p id="lema">Humildad, Ciencia y Honestidad</p>
                     <!--<a href="#" class="button white">Bienvenido</a>-->
                     <!-- Button to Open the Modal -->
@@ -228,23 +229,20 @@
                                             <h2>Expone Ing. En Sistemas Computacionales Proyecto Final</h2>
                                         </div>
                                         <div class="caption-desc" data-animation="animated fadeInUp">
-                                            <p>Coatzacoalcos, Ver.- Este jueves se desarrolló en el aula de la 
-                                                Universidad Istmo Americana, la presentación de los proyectos 
-                                                integradores realizado por los alumnos de los diversos semestres 
-                                                de Ingeniería en Desarrollo de Software.</p>
+                                            <p>Coatzacoalcos, Ver.- Estudiantes de segundo semestre de Ingeniería en Desarrollo y Gestión de Software de la Universidad Istmo Americana (UIA), modalidad escolarizada, presentaron este lunes su proyecto integrador.</p>
                                         </div>
                                         <div class="caption-button" data-animation="animated fadeInUp">
-                                            <a href="https://www.facebook.com/pg/Universidad-Istmo-Americana-153904661343430/photos/?tab=album&album_id=2154507897949753" class="button">Leer mas</a>
+                                            <a href="https://www.facebook.com/153904661343430/posts/2446633715403835/" class="button">Leer mas</a>
                                         </div>
                                     </div>
                                     <div class="col-xs-6 col-md-3">
                                         <div class="caption-photo one" data-animation="animated fadeInRight">
-                                            <img src="images/AppSolar.jpg" alt="">
+                                            <img src="images/juanMa.jpg" alt="">
                                         </div>
                                     </div>
                                     <div class="col-xs-6 col-md-3">
                                         <div class="caption-photo two" data-animation="animated fadeInRight">
-                                            <img src="images/AppIne.jpg" alt="">
+                                            <img src="images/basurto.jpg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -256,7 +254,7 @@
                                             <h2>Semana académica "CULTUR-ISTMO 2018"</h2>
                                         </div>
                                         <div class="caption-desc" data-animation="animated fadeInUp">
-                                            <p>Conferencia entornos visuales de aprendizaje Coatzacoalcos, 
+                                            <p class="text-justify">Conferencia entornos visuales de aprendizaje Coatzacoalcos, 
                                                 Ver.- Durante esta tarde se llevó a cabo la conferencia entornos 
                                                 visuales de aprendizaje, misma que fue dirigida por el catedrático 
                                                 Giber Nández Irineo, en la sala de usos múltiples (SUM) de la 
@@ -285,7 +283,7 @@
                                             <h2>Prevención en ciberacoso y violencia digital</h2>
                                         </div>
                                         <div class="caption-desc" data-animation="animated fadeInUp">
-                                            <p>Coatzacoalcos, Ver.- Con el objetivo de prevenir el acoso y violencia en los jóvenes, 
+                                            <p class="text-justify">Coatzacoalcos, Ver.- Con el objetivo de prevenir el acoso y violencia en los jóvenes, 
                                                 esta jueves se llevó a cabo la conferencia “Prevención del Ciberacoso y Violencia Digital”, 
                                                 impartido por la licenciada Olimpia Coral Melo Cruz. En dicha actividad participaron los alumnos 
                                                 de ingeniera en gestión y desarrollo de software de la Universidad Istmo Americana (UIA). 
@@ -315,7 +313,7 @@
                                             <h2>Primer Mini Torneo de Robótica Educativa</h2>
                                         </div>
                                         <div class="caption-desc" data-animation="animated fadeInUp">
-                                            <p>Coatzacoalcos, Ver.- Esta mañana la Universidad Istmo Americana fue sede del primer mini 
+                                            <p class="text-justify">Coatzacoalcos, Ver.- Esta mañana la Universidad Istmo Americana fue sede del primer mini 
                                                 torneo de robótica educativa para alumnos de preescolar, primaria, secundaria y bachillerato, 
                                                 en donde participaron en las categorías, programador bluetooth, programador avanzado, mBot sumo, 
                                                 mBot soccer, codeybots. 
@@ -379,7 +377,7 @@
                             <img src="images/portfolio-icon-1.png" alt="">
                         </div>
                         <h3>Control de Calidad</h3>
-                        <p>El diseño y el análisis de sistemas orientados a los diferentes dispositivos interactivos que existen actualmente.</p>
+                        <p class="text-justify">El diseño y el análisis de sistemas orientados a los diferentes dispositivos interactivos que existen actualmente.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
@@ -388,7 +386,7 @@
                             <img src="images/portfolio-icon-2.png" alt="">
                         </div>
                         <h3>Desarrollo De Aplicaciones Web</h3>
-                        <p>Conocimientos básicos, la terminología y los conceptos fundamentales que son necesarios para construir aplicaciones web integradas modernas.</p>
+                        <p class="text-justify">Conocimientos básicos, la terminología y los conceptos fundamentales que son necesarios para construir aplicaciones web integradas modernas.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
@@ -397,7 +395,7 @@
                             <img src="images/portfolio-icon-3.png" alt="">
                         </div>
                         <h3>Administración de centros de información</h3>
-                        <p>Crear y administrar centros especializados para la recopilación de información, producir información  y distribuirla.
+                        <p class="text-justify">Crear y administrar centros especializados para la recopilación de información, producir información  y distribuirla.
                         </p>
                     </div>
                 </div>
@@ -407,7 +405,7 @@
                             <img src="images/portfolio-icon-4.png" alt="">
                         </div>
                         <h3>Diseño y Seguridad De Redes</h3>
-                        <p>La Seguridad en redes tiene el objetivo de mantener el intercambio de información libre de riesgo y proteger los recursos informáticos de los usuarios y las organizaciones.</p>
+                        <p class="text-justify">La Seguridad en redes tiene el objetivo de mantener el intercambio de información libre de riesgo y proteger los recursos informáticos de los usuarios y las organizaciones.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
@@ -416,7 +414,7 @@
                             <img src="images/portfolio-icon-5.png" alt="">
                         </div>
                         <h3>Desarrollo Movil</h3>
-                        <p>Los desarrolladores de aplicaciones para móvil son capaces de diseñar, programar y actualizar proyectos móviles integrando dichos proyectos con servicios de internet.</p>
+                        <p class="text-justify">Los desarrolladores de aplicaciones para móvil son capaces de diseñar, programar y actualizar proyectos móviles integrando dichos proyectos con servicios de internet.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
@@ -425,7 +423,7 @@
                             <img src="images/portfolio-icon-6.png" alt="">
                         </div>
                         <h3>UI/UX Design</h3>
-                        <p>Diseño y el análisis de sistemas orientados a los diferentes dispositivos interactivos que existen actualmente.</p>
+                        <p class="text-justify">Diseño y el análisis de sistemas orientados a los diferentes dispositivos interactivos que existen actualmente.</p>
                     </div>
                 </div>
             </div>
@@ -583,7 +581,7 @@
                                 <li><span class="ti-user"></span> <a href="#">Luis Fernando </a></li>
                                 <li><span class="ti-calendar"></span> <a href="#">Mar 03, 2019</a></li>
                             </ul>
-                            <p>El internet de las cosas es un sistema que permite conectar múltiples dispositivos y transferir datos por medio de una red. Estos llegan a utilizar sensores y APIs para intercambiar datos por medio del internet.</p>
+                            <p class="text-justify">El internet de las cosas es un sistema que permite conectar múltiples dispositivos y transferir datos por medio de una red. Estos llegan a utilizar sensores y APIs para intercambiar datos por medio del internet.</p>
                         </div>
                     </div>
                 </div>
@@ -598,7 +596,7 @@
                                 <li><span class="ti-user"></span> <a href="#">luis Fernando</a></li>
                                 <li><span class="ti-calendar"></span> <a href="#">Feb 01, 2017</a></li>
                             </ul>
-                            <p>Este gran lenguaje fue creado por la compañia de JetBrains. Kotlin tiene 2 años siendo soportado por Google para poder programar dentro del ecosistema de android.</p>
+                            <p class="text-justify">Este gran lenguaje fue creado por la compañia de JetBrains. Kotlin tiene 2 años siendo soportado por Google para poder programar dentro del ecosistema de android.</p>
                         </div>
                     </div>
                 </div>
@@ -614,7 +612,7 @@
                                 <li><span class="ti-user"></span> <a href="#">Luis Alberto</a></li>
                                 <li><span class="ti-calendar"></span> <a href="#">Feb 16, 2019</a></li>
                             </ul>
-                            <p>Hace 20 años, existía poco interés por la creación de una marca personal, 
+                            <p class="text-justify">Hace 20 años, existía poco interés por la creación de una marca personal, 
                                 debido a la forma de reclutar a nuevo personal e identificar el talento.</p>
                         </div>
                     </div>
